[gd_scene load_steps=7 format=3 uid="uid://bibth0cg0ljb2"]

[ext_resource type="Theme" uid="uid://bdh08pai5gknl" path="res://theme.tres" id="1_n0wtm"]
[ext_resource type="Script" uid="uid://bjdgm4mcagfu1" path="res://Components/ready_check.gd" id="2_n0wtm"]
[ext_resource type="AudioStream" uid="uid://b4yqah5wa80mo" path="res://Sounds/ready check.ogg" id="3_lie6r"]
[ext_resource type="AudioStream" uid="uid://behosy1wfs4no" path="res://Sounds/pull timer.ogg" id="4_us6l4"]
[ext_resource type="AudioStream" uid="uid://b8b5eoo2hcle0" path="res://Sounds/info.ogg" id="5_hqv7u"]

[sub_resource type="AudioStreamPlaylist" id="AudioStreamPlaylist_v0td2"]
loop = false
stream_count = 2
stream_0 = ExtResource("4_us6l4")
stream_1 = ExtResource("5_hqv7u")

[node name="ReadyCheck" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_n0wtm")
script = ExtResource("2_n0wtm")

[node name="PanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "A ready check has been initiated"

[node name="ReadyButton" type="Button" parent="PanelContainer/VBoxContainer"]
process_mode = 2
layout_mode = 2
text = "Ready"

[node name="ControlsPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -564.0
offset_top = 163.0
offset_right = -250.0
offset_bottom = 294.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ControlsPanel"]
layout_mode = 2
text = "Controls:
Move with WASD
Attack with Left Mouse"

[node name="Countdown" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -230.0
offset_right = 20.0
offset_bottom = -154.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 60
text = "5"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_lie6r")
volume_db = -10.0

[node name="CountdownPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamPlaylist_v0td2")
volume_db = -10.0

[node name="CountdownTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="pressed" from="PanelContainer/VBoxContainer/ReadyButton" to="." method="_on_ready_button_pressed"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_countdown_timer_timeout"]
